[package]
name = "handball"
version = "0.0.0"
edition = "2024"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
openid = { version = "0.12", default-features = false, features = ["rustls"] }
url = "2"
anyhow = "1"
base64 = "0.21"
include_directory = "0.1.1"
maud = {version = "0.27"}

[dev-dependencies]
rstest = { version = "0.18", default-features = false }
